# lambda-ray

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Components/: Component.hpp  Mesh.cpp  Mesh.hpp
src/Interfaces/: IRenderConsumer.hpp
src/Resources/: MeshResource.cpp  MeshResource.hpp  Resource.cpp  Resource.hpp
src/Scene/: ObjectsContainer.hpp  Scene.hpp  SceneObject.hpp
src/Util/: BasicSettingsManager.cpp  BasicSettingsManager.hpp
src/render/: viewport.cpp  viewport.hpp
src/render/cl/: render.cpp  render.hpp
